# searxng_search_mcp

./: .gitignore  CLAUDE.md  CRUSH.md  LICENSE  MCP_WHEEL_TEST_RESULTS.md  MODULARIZATION_SUMMARY.md  README.md  USAGE.md  WHEEL_TEST_RESULTS.md  pyproject.toml
examples/: README.md  advanced_examples.py  analysis_flow_demo.py  integration_examples.py  performance_benchmarks.py  workflow_demo.py  workflow_demo_fixed.py
src/searxng_search_mcp/: __init__.py  __main__.py  analyzer.py  client.py  server.py  server_main.py  utils.py
tests/: test_analysis_integration.py  test_analyzer.py  test_comprehensive.py  test_demo.py  test_edge_cases.py  test_formats.py  test_integration.py  test_performance.py  test_schema.py  test_server.py  test_uvx_integration.py
